add external files

--- a/hotel_california.html
+++ b/hotel_california.html
@@ -1,70 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hotel California - Eagles</title>
-  <style>
-    body {
-      background-color: #0e0e0e;
-      color: #fff;
-      font-family: 'Segoe UI', sans-serif;
-      padding: 1rem;
-    }
-
-    header {
-      background-color: #3f0e40;
-      padding: 1rem;
-      text-align: center;
-      font-size: 1.5rem;
-      font-weight: bold;
-      color: #fff;
-      border-bottom: 3px solid #a64ca6;
-      position: relative;
-    }
-
-    .logo {
-      position: absolute;
-      top: 50%;
-      left: 1rem;
-      transform: translateY(-50%);
-      height: 40px;
-    }
-
-    .tab {
-      white-space: pre-wrap;
-      font-family: monospace;
-      background-color: #1e002d;
-      padding: 1rem;
-      border-radius: 8px;
-      margin-top: 1rem;
-      border-left: 5px solid #a64ca6;
-    }
-
-    a {
-      color: #d9b3ff;
-      text-decoration: none;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hotel California - Eagles</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
+
 <body>
-  <header>
-    <img src="logo.jpg" alt="Logo" class="logo">
-    Hotel California - Eagles
-  </header>
+    <header>
+        <img src="logo.jpg" alt="Logo" class="logo">
+        Hotel California - Eagles
+    </header>
 
-  <a href="index.html">← Back to Home</a>
+    <a href="index.html">← Back to Home</a>
 
-  <div class="tab">
-[Intro]
-Bm  F#  A  E  G  D  Em  F#
+    <div class="tab">
+        [Intro]
+        Bm F# A E G D Em F#
 
-[Verse 1]
-Bm              F#
-On a dark desert highway, cool wind in my hair
-A              E
-Warm smell of colitas rising up through the air
-G              D
-Up ahead in the distance, I saw a shimmering light
-Em
-My head grew heavy and my sight grew
+        [Verse 1]
+        Bm F#
+        On a dark desert highway, cool wind in my hair
+        A E
+        Warm smell of colitas rising up through the air
+        G D
+        Up ahead in the distance, I saw a shimmering light
+        Em
+        My head grew heavy and my sight grew
+    </div>
+</body>
+
+</html>
