--- a/index.html
+++ b/index.html
@@ -3,93 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Guitar Tabs</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #0e0e0e;
-      color: #fff;
-      padding: 1rem;
-    }
-
-    header {
-      background-color: #3f0e40;
-      padding: 1rem;
-      text-align: center;
-      font-size: 1.5rem;
-      font-weight: bold;
-      color: #fff;
-      border-bottom: 3px solid #a64ca6;
-      position: relative;
-    }
-
-    .logo {
-      position: absolute;
-      top: 50%;
-      left: 1rem;
-      transform: translateY(-50%);
-      height: 40px;
-    }
-
-    .search-bar {
-      margin: 1rem 0;
-    }
-
-    .search-bar input {
-      width: 100%;
-      padding: 0.75rem;
-      border: none;
-      border-radius: 8px;
-      font-size: 1rem;
-      background-color: #2e003e;
-      color: white;
-    }
-
-    .search-bar input::placeholder {
-      color: #ccc;
-    }
-
-    .song-list {
-      margin-top: 1rem;
-    }
-
-    .song {
-      background-color: #1e002d;
-      padding: 1rem;
-      border-radius: 10px;
-      margin-bottom: 1rem;
-      border-left: 5px solid #a64ca6;
-    }
-
-    .song h2 {
-      font-size: 1.2rem;
-      margin-bottom: 0;
-      color: #d9b3ff;
-    }
-
-    .song a {
-      text-decoration: none;
-      color: #d9b3ff;
-    }
-
-    footer {
-      text-align: center;
-      margin-top: 2rem;
-      font-size: 0.9rem;
-      color: #aaa;
-    }
-  </style>
+  <title>Basic Nepali Chords</title>
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
   <header>
     <img src="logo.jpg" alt="Logo" class="logo">
-    Guitar Tab Archive
+    Basic Nepali Chords
   </header>
 
   <div class="search-bar">
