--- a/wonderwall.html
+++ b/wonderwall.html
@@ -4,48 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wonderwall - Oasis</title>
-  <style>
-    body {
-      background-color: #0e0e0e;
-      color: #fff;
-      font-family: 'Segoe UI', sans-serif;
-      padding: 1rem;
-    }
-
-    header {
-      background-color: #3f0e40;
-      padding: 1rem;
-      text-align: center;
-      font-size: 1.5rem;
-      font-weight: bold;
-      color: #fff;
-      border-bottom: 3px solid #a64ca6;
-      position: relative;
-    }
-
-    .logo {
-      position: absolute;
-      top: 50%;
-      left: 1rem;
-      transform: translateY(-50%);
-      height: 40px;
-    }
-
-    .tab {
-      white-space: pre-wrap;
-      font-family: monospace;
-      background-color: #1e002d;
-      padding: 1rem;
-      border-radius: 8px;
-      margin-top: 1rem;
-      border-left: 5px solid #a64ca6;
-    }
-
-    a {
-      color: #d9b3ff;
-      text-decoration: none;
-    }
-  </style>
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
   <header>
